# hipSOLVER

./: CMakeLists.txt
clients/: CMakeLists.txt
clients/gtest/: CMakeLists.txt  gebrd_gtest.cpp  geqrf_gtest.cpp  gesvd_gtest.cpp  getrf_gtest.cpp  getrs_gtest.cpp  orgbr_ungbr_gtest.cpp  orgqr_ungqr_gtest.cpp  orgtr_ungtr_gtest.cpp  ormqr_unmqr_gtest.cpp  ormtr_unmtr_gtest.cpp  potrf_gtest.cpp  potri_gtest.cpp  potrs_gtest.cpp  syevd_heevd_gtest.cpp  syevj_heevj_gtest.cpp  sygvd_hegvd_gtest.cpp  sytrd_hetrd_gtest.cpp
clients/include/: hipsolver.hpp  utility.hpp
